--- a/db/package.json
+++ b/db/package.json
@@ -4,20 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=./config/dev.env"
+    "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=./config/dev.env",
+    "test": "mocha -r ts-node/register --config ./config/mocha.json tests/**/*.test.ts -r dotenv/config dotenv_config_path=./config/test.env"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
     "@types/morgan": "^1.9.1",
+    "@types/node": "^14.14.7",
+    "@types/sequelize": "^4.28.9",
+    "@types/sinon": "^9.0.8",
+    "@types/validator": "^13.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
+    "sinon": "^9.2.1",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.0.4",
+    "@types/supertest": "^2.0.10",
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.5",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
