DB server refactor to connect to socket server

--- a/db/config/dev.env
+++ b/db/config/dev.env
@@ -3,4 +3,8 @@
 #SQLUser =
 #SQLDatabase =
 #SQLPassword =
-PORT = 8082
+PORT = 8081
+SQLHost = dumas.ir
+SQLUser = vpsmysql
+SQLDatabase = ts-tube
+SQLPassword = root7613
